--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
-baseurl = "https://<ehab-hassan>.github.io/<midori_archive
->"
+baseurl = "https://ehab-hassan.github.io/midori_archive"
 LanguageCode = "en"
 title = "Midori"
 theme = "landing"
