--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-baseurl = "https://ehab-hassan.github.io/midori_archive"
+baseurl = "https://ehab-hassan.github.io/midori_archive/"
 LanguageCode = "en"
 title = "Midori"
 theme = "landing"
 contentdir = "content"
 staticdir = "static"
-publishdir = "en"
+publishDir = "docs"
 relativeURLs = true
 
 [permalinks]
